2020-01-20  Akira Kakuto  <kakuto@w32tex.org>

	Import gmp-6.2.0.
	* Makefile.am, version.ac: Updated for 6.2.0.

2017-12-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Makefile.am: Move several files from unused to used
	to avoid link error for mpfr-4.0.0.

2017-01-11  Karl Berry  <karl@tug.org>

	* m4/gmp-alloca.m4: use gmp-src instead of gmp-6.1.2.
	Found by Akira.

2016-12-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gmp-6.1.2.

2016-06-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gmp-6.1.1.

2016-02-15  Karl Berry  <karl@tug.org>

	* gmp-PATCHES: rename from gmp-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gmp-6.1.0.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-12-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added GMP_H_EXTERN_INLINE.
	* m4/gmp-extern-inline.m4 (new): Define GMP_H_EXTERN_INLINE.

2014-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added KPSE_COMPILER_VISIBILITY.
	* Makefile.am [AM_CFLAGS]: Added $(VISIBILITY_CFLAGS).

2014-06-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Add some files required with CFLAGS='-g3 -g -O0'.
	Problem reported by Luigi Scarso <luigi.scarso@gmail.com>.

2014-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Converted wrapper => proxy build system.

	* Makefile.am (basic_unused, mpn_unused, mpz_unused):
	Compile only as needed by mpost (via libmpfr).

2014-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrated into TeX Live with wrapper build system.
	Imported gmp-6.0.0.

2014-03-31  Taco Hoekwater  <taco@metatex.org>

	Imported gmp-5.1.3.

(This ChangeLog file public domain.)